--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,4 @@
-# Code quality
-coverage
-pycodestyle
-pylint
-pytest
-pytest-cov
-pytest-pycodestyle
-pytest-pylint
-pytest-xdist
-radon
-
-# Interactive environments
-ipython
-jupyter
-
-# Basic utility packages
-PyYAML
-
-# Data science packages
-matplotlib
+# Only packages necessary for code to run. See dev branch for other packages used in development and testing.
 numpy
-pandas
-scikit-learn
 scipy
-seaborn
-
-# Other - datasets
-tensorflow
-tensorflow-datasets
-
-#Performance
 numba
